# esp-box

./: .project
components/ble50_sc_component/: .cproject  .project  CMakeLists.txt  ble50_sc_component.c
components/ble50_sc_component/main/: .cproject  .project
components/bsp/: .cproject  .project
components/gatt_client/: CMakeLists.txt  gatt_client.c
components/gatt_client/main/: gattc_demo.c
components/i2c_bus/: .cproject  .project
components/i2c_devices/: .cproject  .project
components/i2c_devices/icm42670/test/: .cproject  .project
components/iot_button/: .cproject  .project
components/iot_button/test/: .cproject
components/libhelix-mp3/: .cproject  .project
components/lvgl/: .cproject
examples/factory_demo/: .cproject  .project
examples/factory_demo/main/: .cproject  .project
examples/image_display/: .cproject  .project
examples/image_display/main/: .cproject  .project
examples/lv_demos/: .cproject  .project  CMakeLists.txt
examples/lv_demos/main/: .cproject  .gitignore  CMakeLists.txt  lv_demos.c  tmp.rar  ui.c  ui.c.back  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h  ui_img_dexter_axle_anniversary_logo_png.c  ui_img_rsz_dexter_big_png.c  ui_img_rsz_picture4_png.c  ui_img_rsz_tpmsicon_png.c  ui_img_weight_s_png.c  ui_img_weight_truck_png.c
examples/mp3_demo/: .cproject  .project
examples/mp3_demo/main/: .cproject  .project
examples/watering_demo/: .cproject  .project
examples/watering_demo/main/: .cproject  .project
